# object-oriented-programming-lab3

./: CMakeLists.txt  README.md  main.cpp
include/: Array.h  Figure.h  Rectabgle.h  Square.h  Trapezoid.h
src/: Array.cpp  Rectangle.cpp  Square,cpp  Trapezoid.cpp
